Fix: resolve 409 error on product update and fix image URL issues